[gd_scene load_steps=16 format=2]

[ext_resource path="res://sounds/statistics_1.ogg" type="AudioStream" id=1]
[ext_resource path="res://scripts/soundsUtil.gd" type="Script" id=2]
[ext_resource path="res://sounds/powerup_pick.ogg" type="AudioStream" id=3]
[ext_resource path="res://sounds/powerup_appear.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/explosion_2.ogg" type="AudioStream" id=5]
[ext_resource path="res://sounds/explosion_1.ogg" type="AudioStream" id=6]
[ext_resource path="res://sounds/game_over.ogg" type="AudioStream" id=7]
[ext_resource path="res://sounds/pause.ogg" type="AudioStream" id=8]
[ext_resource path="res://sounds/stage_start.ogg" type="AudioStream" id=9]
[ext_resource path="res://sounds/life.ogg" type="AudioStream" id=10]
[ext_resource path="res://sounds/eat.ogg" type="AudioStream" id=11]
[ext_resource path="res://sounds/bullet_hit_1.ogg" type="AudioStream" id=12]
[ext_resource path="res://sounds/award.ogg" type="AudioStream" id=13]
[ext_resource path="res://sounds/tankDestroy.ogg" type="AudioStream" id=14]
[ext_resource path="res://sounds/bouns.ogg" type="AudioStream" id=15]

[node name="soundsUtil" type="Node2D"]
script = ExtResource( 2 )

[node name="point" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="power1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="power2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="explosion1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="explosion2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="gameover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="bomb" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="bonus" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="pause" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 8 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="life" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="eat" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="bullet" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="award" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="tankDestroy" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="Button" type="Button" parent="."]
visible = false
margin_right = 12.0
margin_bottom = 20.0
text = "play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bouns" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
